# scirepeval

./: instr_prompts.json  number_of_parameters.py  plot.py  preprocess_triplets.py  pyproject.toml  quote_tasks.jsonl  requirements.txt  requirements_from_uv.txt  requirements_new_models.txt  scirepeval.py  scirepeval_results_Qwen3-Embedding-0.6B.json  scirepeval_results_bge-large-en-v1.5.json  scirepeval_results_bge-m3.json  scirepeval_results_embeddinggemma-300m.json  scirepeval_results_mxbai-embed-large-v1.json  scirepeval_results_nomic-embed-text-v1.5.json  scirepeval_results_specter2-base.json  scirepeval_results_specter2_base_task_adapters.json  scirepeval_tasks.jsonl  train_specter.py
evaluation/: embeddings_generator.py  encoders.py  eval_datasets.py  evaluator.py  instructor.py  instructor_new.py
training/: mtl_datasets.py  pl_training.py  st_training.py  tasks.py  triplet_loss_evaluator.py
