[project]
name = "scirepeval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py>=1.2.0",
    "adapters>=1.2.0",
    "aiohttp>=3.8.1",
    "boto3>=1.24.90",
    "botocore>=1.27.90",
    "certifi>=2022.6.15",
    "click>=8.1.3",
    "cython>=3.0.0",
    "datasets==2.19.0",
    "dill>=0.3.5",
    "filelock>=3.8.0",
    "fsspec>=2023.5.0",
    "gritlm==1.0.2",
    "huggingface-hub>=0.23.0",
    "hydra-core>=1.3.0",
    "idna>=3.3",
    "importlib-metadata>=4.12.0",
    "joblib>=1.1.0",
    "lxml>=4.9.1",
    "markdown>=3.4.1",
    "markupsafe>=2.1.1",
    "multiprocess>=0.70.13",
    "numpy>=1.24.0,<2.0.0",
    "omegaconf>=2.3.0",
    "openai>=0.26.1",
    "pandas>=1.5.0",
    "pillow>=9.2.0",
    "portalocker>=2.5.1",
    "protobuf>=3.20.2,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<5.0.0",
    "pyarrow==12.0.1",
    "pytorch-lightning>=2.0.0",
    "pytrec-eval==0.5",
    "pyyaml>=6.0",
    "regex>=2022.8.17",
    "requests>=2.28.1",
    "s3transfer>=0.6.0",
    "sacrebleu==2.2.0",
    "sacremoses==0.0.53",
    "scikit-learn>=1.1.2",
    "scikit-multilearn==0.2.0",
    "scipy>=1.9.0",
    "sentence-transformers==5.1.0",
    "setuptools>=60.0",
    "tabulate>=0.8.10",
    "tensorboard>=2.10.0",
    "tensorboardx>=2.5.1",
    "tokenizers>=0.19.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "torchmetrics>=1.0.0",
    "torchvision>=0.16.0",
    "tqdm>=4.64.0",
    "transformers>=4.51.1",
    "typing-extensions>=4.3.0",
    "urllib3>=1.26.12",
    "wheel>=0.38.0",
    "xxhash>=3.0.0",
]
